# games101-computer-graphics

./: .gitignore  CMakeLists.txt  README.md
assignment5/: Renderer.cpp  Renderer.hpp  Triangle.hpp  Vector.hpp  main.cpp
assignment6/: BVH.cpp  Bounds3.hpp  Intersection.hpp  Renderer.cpp  Triangle.hpp  main.cpp
assignment7/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  main.cpp
